codebrag-ui/app/styles/popups.styl
// Stucture for pop-up
// Popup should have additional class - ribbon, uservoice
// Popup has popup-box inside
// Popup-box has close-btn at top right corner
// Popup-box shouldn't have any paddings
// Give class popup-content to form or div inside of popup box to have a padding
// When form, wrap different states - initial, success, error - in filedsets 

.popup-page
  background-color: rgba(0,0,0,0.7);
  bottom: 0;
  display: block;
  height: 100%;
  left: 0;
  position: absolute;
  right: 0;
  text-align: center;
  top: 0;
  width: 100%;
  z-index: 1000;

  &.uservoice
    & .uv-success
      display: none;
      & p
        text-align: center;
      &.opened
        display: block;

    & .uv-error
      display: none;
      & p
        text-align: center;
      &.opened
        display: block;

  &.invite
    & .invitation
      display: none;
      &.opened
        display: block;
    & .invite-success
      display: none;
      & p
        text-align: center;
      &.opened
        display: block;

  & .profile-info
    margin-bottom: 3em;
    text-align: left;

    & .author-box
      & img
        margin-right: 1.15em;
        width: 3.85em;

    & .info-box
      text-align: left;

      & div
        margin: 0.5em 0;

    & h1
      margin-bottom: 0.4em;

      & .info-line
        margin: 0.77em 0;
        margin-top: 0.3em;

    & label
      min-width: 336px;

    & input[type="checkbox"]
      float: right;
      margin-top: 0.2em;
      vertical-align: top;

    & p:last-child
      margin-bottom: 0;

  &.manage-users .popup-box
    width: auto;
    max-width: none;

.popup-box
  background-color: $body-bg-color;
  border: 1px solid white;
  box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.5);
  display: inline-block;
  max-width: 500px;
  position: relative;
  text-align: center;
  top: 20%;
  width: 450px;

  & .close-btn
    background: $form-input-bg-color;
    color: $error-red-color;
    display: inline-block;
    padding: 0.77em;
    position: absolute;
    right: 0;
    top: 0;
    transition: background 250ms, color 250ms; 
    &:hover
      background: $error-red-color;
      color: white;

  & .popup-content
    padding: 2.3em;

  & h1
    font-size: 1.17em;
    margin-top: 0;
    text-align: center;

  & a
    color: $main-orange-color;
    text-decoration: none;

  & blockquote
    background: $form-input-bg-color;
    border-left: 0.38em solid $main-orange-color;
    color: $second-body-text-color;
    font-style: italic;
    line-height: 1.4;
    margin: 1.5em 0 0;
    padding: 0.77em 1em 0.77em 2.3em;
    text-align: left;
    & footer
      font-style: normal;
      margin-top: 0.5em;

  & fieldset
    padding: 0;

  & label
    margin-bottom: 0.38em;
    text-align: left;

  & input, textarea, .list, :not(input[type="checkbox"])
    border: 1px solid #ccc;
    box-shadow: none;
    min-width: 400px;
    margin-bottom: 1.15em;
    padding: 7px;
    width: 100%;

  & .list
    background: #fff;
    margin-bottom: 10px;
    height: 150px;
    overflow-y: auto;

  & ul
    list-style: none;
    padding: 0;
    text-align: left;

  & .pending
    color: $main-orange-color

  & .success
    color: $lime-green-color

  & .failed
    color: $error-red-color

  & input, :not(input[type="checkbox"])
    height: 32px;

  & textarea
    resize: vertical;
    height: auto;

  & .form-group span.text-error
    bottom: -16px;

  // for scrollability start
  & .fake-thead-container
    padding-top: 20px;
    position: relative;

  & .table-container
    border-bottom: 1px solid #d1cbb9;
    border-top: 1px solid #d1cbb9;
    max-height: 16em;
    margin-bottom: 1.15em;
    overflow-x: hidden;
    overflow-y: auto;
    padding-left: 1px;
    padding-right: 1px;

  & .thead
    position: absolute;
    top: 0;

  & table th
    padding-top: 0;
    padding-bottom: 0;
  // for scrollability end

  & table 
    border-color: $second-body-text-color;
    text-align: left;

    & thead 
      border-color: transparent;
      
    & th
      color: $second-body-text-color;
      font-weight: normal;

    & .cell-centered
      text-align: center;
      min-width: 4.15em;

    & tbody
      & tr
        border: 1px solid #d1cbb9;
        &:first-child
          border-top: none;
        &:last-child
          border-bottom: none;

  & .license-info-line
    color: $second-body-text-color;
    margin-bottom: 1.15em;

  & table button.link
    color: $main-orange-color;
    &[disabled="disabled"]
      color: $second-body-text-color;

  & tbody tr td.user-email
    min-width: 11em;

